<resources>
    <string name="app_name">Notes</string>
    <string name="heading">Heading</string>
    <string name="content">Content</string>
    <string name="_12_2_2024">12/2/2024</string>
    <string name="add_new_note">Add New Note</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="submit">Submit</string>
    <string name="note_title">Note Title</string>
    <string name="notes2">Notes...</string>
    <string name="textview">TextView</string>
    <string name="headi">TextView</string>
    <string name="edit">Edit</string>
</resources>